@@ -16,6 +16,7 @@ Maintenance
 
 * Ability to retrieve raw frames encoded as unsigned 32-bits integers
 * Fix issue 35 (AET name is not transferred to Orthanc using DCMTK 3.6.0)
+* Fix issue 44 (Bad interpretation of photometric interpretation MONOCHROME1)
 
 
 Version 1.2.0 (2016/12/13)
